--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,6 +31,7 @@ jobs:
               uses: JamesIves/github-pages-deploy-action@3.7.1
               with:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  BASE_BRANCH: master
                   BRANCH: gh-pages
                   FOLDER: release/wwwroot
                   
