--- a/LabyrinthianDemo/LabyrinthianDemo.csproj
+++ b/LabyrinthianDemo/LabyrinthianDemo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Labyrinthian.Svg" Version="1.2.1" />
+		<PackageReference Include="Labyrinthian.Svg" Version="1.2.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
 		<PackageReference Include="MudBlazor" Version="6.11.0" />
